@@ -6,7 +6,7 @@ title: Advanced configuration
 
 ## Regex
 
-### File replace regex
+### File regex pattern
 
 <!-- md:flag required -->
 <!-- md:meta text | package_replace_regex -->
@@ -16,22 +16,6 @@ This is a regex used throughout the package renaming process. It's default value
 !!! warning
 
     It's important that the substring `{value}` be present and that the regex is valid, or the renaming process _will not work_. If you're trying to edit the regex, use [regex.101](https://regex101.com/) or other tools to make sure it won't fail.
-
-### Thread count
-
-<!-- md:flag wip -->
-<!-- md:meta num | threads -->
-
-Specifies the maximum number of threads that can work towards the renaming process.
-
-!!! note
-
-    This only specifies the *maximum* number of threads that can be used, it doesn't guarantee that many threads are going to be used, especially if the package is super small.
-
-    This value can also be overridden by writing directly to the configuration file, but increasing the number of threads will not be beneficial if your systems CPU doesn't support
-    the number of requested threads.
-
-    [The case of creating too many threads](https://www.baeldung.com/cs/servers-threads-number#bd-1-advantages-and-disadvantages-of-threads-versus-processes)
 
 ## Rename options
 
@@ -69,7 +53,7 @@ There isn't an option for renaming OBB files because that's a standard part of t
 
 With this, the file entries in every found OBB file are searched through in memory. If an entry either has the word "catalog" inside it or is a direct match to an entry in the `Extra OBB Rename Paths` text box, then it's fully extracted into memory, renamed, then repacked into the OBB.
 
-## OBB renaming extras
+## OBB renaming
 
 ### Extra OBB rename paths
 
@@ -81,6 +65,33 @@ Every line in this textbox will be used as an internal file path in each OBB fil
 For example, the if the path `aa/Android/bin/tts/index.json` is found in an OBB file, that file will be extracted into memory, renamed, then repacked. No error or warning will be triggered if it's not found.
 
 Each item can be either comma or newline separated. They will be newline separated regardless of the method used the next time APKognito loads the saved values.
+
+## Java options
+
+### Java flags
+
+<!-- md:meta text | java_flags -->
+
+Additional flags to be injected into the Java process.
+
+The default value for this option is `--enable-native-access=ALL-UNNAMED` and allows apps to call methods which are implemented in native code.
+This option was only required due to security changes made by Oracle and is requried in order to use Uber APK Signer.
+
+If a rename fails and the output logs say:
+
+<!-- Jimmyrigged to high hell, but it works. -->
+<div class="highlight">
+<pre>
+<span></span><code style="color: red">Unrecognized option: --enable-native-access=ALL-UNNAMED
+Error: Could not create the Java Virtual Machine
+Error: A fatal exception has occurred. Program will exit.
+</code></pre></div>
+
+Simply clear the Java flags textbox, save your changes, and re-run the renaming process. This error is caused when using an older JDK or JRE
+version that was made prior to the indroduction of this flag.
+
+!!! info
+Note, this is for the Java executable, not the .jar file that Java is running.
 
 ### Auto rename configs
 
@@ -98,3 +109,27 @@ Auto rename configs use explicit UNIX-like commands to manipulate the renaming p
 All commands are manually implemented wrappers for operations defined in C# ([command bindings](https://github.com/Sombody101/APKognito/tree/master/APKognito/ApkMod/Automation/CommandBindings)).
 
 More information on auto rename configs can be found in the [auto config API](./auto_config_api.md) guide.
+
+## Buffers
+
+### Smali cutoff limit
+
+<!-- md:meta number | smali_cutoff_limit -->
+
+The file size limit before a Smali file is streamed rather than fully loaded into memory, in KB. Defaults to `1024` (KB).
+
+### Smali buffer size.
+
+<!-- md:meta number | smali_buffer_size -->
+
+The buffer size for all streamed Smali files, in KB. Defaults to 64 (KB).
+
+!!! note
+
+    This only applies to files larger than the Smali cutoff limit.
+
+### Scan file before rename
+
+<!-- md:meta toggle | scan_smali_before_rename -->
+
+Scans each Smali file for an instance of the original package name. If one is not found, the file is skipped.
